--- a/hw7/writeup/wiki_topics.tex
+++ b/hw7/writeup/wiki_topics.tex
@@ -1,23 +1,23 @@
 % latex table generated in R 3.2.2 by xtable 1.8-0 package
-% Thu Nov 19 13:05:13 2015
+% Thu Nov 19 13:17:14 2015
 \begin{table}[ht]
 \centering
 \caption{Sample Topics for 4 Largest Clusters} 
 \label{tab:wiki_topics}
 \begin{tabular}{llll}
   \hline
-1 & 2 & 3 & 6 \\ 
+5 & 11 & 19 & 20 \\ 
   \hline
-Finitely-generated module & Electrophilic halogenation & Train track & Proceed-to-select \\ 
-  SINGULAR & Butyl & Fréchet space & N11 code \\ 
-  Jordan-Chevalley decomposition & Aromatic compound & Luzin space & Kewlstart \\ 
-  Ring extension & Azirines & Uniform property & Ringer equivalence number \\ 
-  Indecomposable module & Wieland-Miescher ketone & Dual topology & Attendant console \\ 
-  Ideal quotient & Phenylene & Continuous function (topology) & Long-haul communications \\ 
-  Maximal ideal & Cyclosilane & Opial property & Skip (radio) \\ 
-  Brahmagupta&apos;s problem & Ketone halogenation & Positive element & Dial tone \\ 
-  Separable extension & Methylene shuffle & Sigma-compact space & Intercharacter interval \\ 
-  Complete algebraic variety & Phthalimide & Operator topology & Night service \\ 
+Absolute value (algebra) & Hexafluoroacetone & Hydrogen-terminated silicon surface & Bilateral synchronization \\ 
+  Complete quotient & FEMA photo library & Reduction of nitro compounds & Call pick-up \\ 
+  Non-circular gear & Mössbauer spectroscopy & Ketenimine & Dying gasp \\ 
+  Lambert quadrilateral & Barometric light & Activating group & Faraday building \\ 
+  Transitive set & Antifreeze protein & Acid-base reaction & Call Waiting Deluxe \\ 
+  Frank–Wolfe algorithm & Scanning voltage microscopy & Carbon-nitrogen bond & Lockout (telecommunication) \\ 
+  Fundamental theorem of combinatorial enumeration & Food taster & Chemical industry & Call duration \\ 
+  Ordinal date & Impostor & Cascade reaction & Deterministic routing \\ 
+  Quantum graph & Higgs phase & Bort & Do Not Disturb (telecommunications) \\ 
+  Strictly positive measure & Coherent control & Isotopomers & Black box (phreaking) \\ 
    \hline
 \end{tabular}
 \end{table}
