--- a/hw7/writeup/hw7.tex
+++ b/hw7/writeup/hw7.tex
@@ -95,6 +95,29 @@ Ultimately, all algorithms besides the Edge Betweenness and Leading Eigenvector 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Wikipedia}
+\subsection{Clustering}
+Due to the size of the data-set, we apply at the first clustering algorithm that we got working on the data.
+
+% \begin{figure}
+%   \centering
+%   \begin{subfigure}[b]{0.49\textwidth}
+%     \caption{}
+%     \includegraphics[width=\textwidth]{.pdf}
+%     \label{fig:}
+%   \end{subfigure}
+%   \hfill
+%   \begin{subfigure}[b]{0.49\textwidth}
+%     \caption{}
+%     \includegraphics[width=\textwidth]{.pdf}
+%     \label{fig:}
+%   \end{subfigure}
+%   \caption{}
+% \end{figure}
+
+
+
+\input{wiki_topics.tex}
+
 
 \begin{appendices}
 
