--- a/hw7/writeup/wiki_topics.tex
+++ b/hw7/writeup/wiki_topics.tex
@@ -1,23 +1,23 @@
 % latex table generated in R 3.2.2 by xtable 1.8-0 package
-% Thu Nov 19 13:17:14 2015
+% Thu Nov 19 13:48:19 2015
 \begin{table}[ht]
 \centering
 \caption{Sample Topics for 4 Largest Clusters} 
 \label{tab:wiki_topics}
 \begin{tabular}{llll}
   \hline
-5 & 11 & 19 & 20 \\ 
+1 & 2 & 3 & 6 \\ 
   \hline
-Absolute value (algebra) & Hexafluoroacetone & Hydrogen-terminated silicon surface & Bilateral synchronization \\ 
-  Complete quotient & FEMA photo library & Reduction of nitro compounds & Call pick-up \\ 
-  Non-circular gear & Mössbauer spectroscopy & Ketenimine & Dying gasp \\ 
-  Lambert quadrilateral & Barometric light & Activating group & Faraday building \\ 
-  Transitive set & Antifreeze protein & Acid-base reaction & Call Waiting Deluxe \\ 
-  Frank–Wolfe algorithm & Scanning voltage microscopy & Carbon-nitrogen bond & Lockout (telecommunication) \\ 
-  Fundamental theorem of combinatorial enumeration & Food taster & Chemical industry & Call duration \\ 
-  Ordinal date & Impostor & Cascade reaction & Deterministic routing \\ 
-  Quantum graph & Higgs phase & Bort & Do Not Disturb (telecommunications) \\ 
-  Strictly positive measure & Coherent control & Isotopomers & Black box (phreaking) \\ 
+Abstract variet & Unsaturated hyd & Feature data & Calling feature \\ 
+  Cohen-Macaulay  & Acyloin & Strong topology & Core network \\ 
+  Order (ring the & Eschenmoser&apo & Positive elemen & My Circle \\ 
+  Ring (mathemati & Nitronate & Dante space & Eye pattern \\ 
+  Monoid ring & ANRORC mechanis & Bounded set (to & Mechanically in \\ 
+  Radical of a mo & Alpha carbon & Separation axio & Grandfathered s \\ 
+  Noetherian ring & Willgerodt rear & Infinite-dimens & BT Ambassador \\ 
+  Leibniz algebra & Carboxybenzyl & Completely metr & BT Versatility \\ 
+  Boolean algebra & Sandmeyer react & Isolated point & Mobile number p \\ 
+  Étale morphism & Feist-Benary sy & Base (topology) & Local telephone \\ 
    \hline
 \end{tabular}
 \end{table}
