Add sanitized text.

--- a/hw7/writeup/wiki_topics.tex
+++ b/hw7/writeup/wiki_topics.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.8-0 package
-% Thu Nov 19 13:48:19 2015
+% Thu Nov 19 13:50:49 2015
 \begin{table}[ht]
 \centering
 \caption{Sample Topics for 4 Largest Clusters} 
@@ -8,16 +8,16 @@
   \hline
 1 & 2 & 3 & 6 \\ 
   \hline
-Abstract variet & Unsaturated hyd & Feature data & Calling feature \\ 
-  Cohen-Macaulay  & Acyloin & Strong topology & Core network \\ 
-  Order (ring the & Eschenmoser&apo & Positive elemen & My Circle \\ 
-  Ring (mathemati & Nitronate & Dante space & Eye pattern \\ 
-  Monoid ring & ANRORC mechanis & Bounded set (to & Mechanically in \\ 
-  Radical of a mo & Alpha carbon & Separation axio & Grandfathered s \\ 
-  Noetherian ring & Willgerodt rear & Infinite-dimens & BT Ambassador \\ 
-  Leibniz algebra & Carboxybenzyl & Completely metr & BT Versatility \\ 
-  Boolean algebra & Sandmeyer react & Isolated point & Mobile number p \\ 
-  Étale morphism & Feist-Benary sy & Base (topology) & Local telephone \\ 
+Schauder basis & Swern oxidation & Dunce hat (topo & AMATPS \\ 
+  Adjunction (fie & Keto-enol tauto & Continuous func & Osaka Denwa \\ 
+  Introduction to & Dictionary of c & Identity theore & G.703 \\ 
+  Algebraic space & Collection of C & Finite topology & Joint multichan \\ 
+  Different ideal & Hunsdiecker rea & Intrinsic metri & Sender \\ 
+  Coin problem & Enolate anion & Proximity space & Key telephone s \\ 
+  Representation  & Tishchenko reac & Functional anal & Transposition ( \\ 
+  Degree of a fie & Deactivating gr & Closed set & OpenH323 \\ 
+  Quasivariety & Menshutkin reac & Tychonoff plank & Tip and ring \\ 
+  Dual quaternion & CBS reduction & Completely metr & Secondary dialt \\ 
    \hline
 \end{tabular}
 \end{table}
