Re-run with longer text subset.

--- a/hw7/writeup/wiki_topics.tex
+++ b/hw7/writeup/wiki_topics.tex
@@ -1,23 +1,23 @@
 % latex table generated in R 3.2.2 by xtable 1.8-0 package
-% Thu Nov 19 13:50:49 2015
+% Sat Nov 21 16:43:28 2015
 \begin{table}[ht]
 \centering
 \caption{Sample Topics for 4 Largest Clusters} 
 \label{tab:wiki_topics}
 \begin{tabular}{llll}
   \hline
-1 & 2 & 3 & 6 \\ 
+5 & 11 & 19 & 20 \\ 
   \hline
-Schauder basis & Swern oxidation & Dunce hat (topo & AMATPS \\ 
-  Adjunction (fie & Keto-enol tauto & Continuous func & Osaka Denwa \\ 
-  Introduction to & Dictionary of c & Identity theore & G.703 \\ 
-  Algebraic space & Collection of C & Finite topology & Joint multichan \\ 
-  Different ideal & Hunsdiecker rea & Intrinsic metri & Sender \\ 
-  Coin problem & Enolate anion & Proximity space & Key telephone s \\ 
-  Representation  & Tishchenko reac & Functional anal & Transposition ( \\ 
-  Degree of a fie & Deactivating gr & Closed set & OpenH323 \\ 
-  Quasivariety & Menshutkin reac & Tychonoff plank & Tip and ring \\ 
-  Dual quaternion & CBS reduction & Completely metr & Secondary dialt \\ 
+Chain (algebraic top & List of basic cartog & Chain transfer & B8ZS \\ 
+  Hyperstructure & Crystallization (eng & Gattermann reaction & Red box (phreaking) \\ 
+  Opial property & Qualitative inorgani & Chiral pool synthesi & Call management \\ 
+  Discrepancy function & International Worksh & Electron deficiency & Transparency (teleco \\ 
+  Positive set theory & Neo-populism & Quadruple bond & DASS2 \\ 
+  Analog signal proces & Knudsen diffusion & Tetrabutylammonium h & Former Australian di \\ 
+  Quotient group & Michelson-Gale-Pears & Self-healing materia & Spiro (device) \\ 
+  Provable prime & Anti-elitism & Hindered amine & Remote call forwardi \\ 
+  Alexander horned sph & Laser-induced breakd & Valence bond theory & Verizon SmartPark \\ 
+  Equilateral polygon & Anti-symmetric opera & Self-condensation & Hybrid routing \\ 
    \hline
 \end{tabular}
 \end{table}
