Updates from ShareLaTeX

--- a/final-project/writeup/writeup.tex
+++ b/final-project/writeup/writeup.tex
@@ -18,21 +18,26 @@ University of Chicago Booth School of Business}}
 
 \section{Summary}
 
-\section{Facial Keypoints}
-\subsection{Training Initial Work}
-\subsection{Training Individual Feature Models}
-\subsection{Training Feature Present/Missing}
-\subsection{Predictions/Examples}
-
-\subsection{Kaggle}
-
-\section{Out there Ideas}
+\section{Modelling}
+\subsection{Facial Keypoints Introduction}
+\subsection{Building a Model (Tools \& Software)}
+\subsection{Initial Models}
+\subsection{Individual Feature Models}
+Dropout, l1/l2 regularization, and momentum/learning rate.
+\subsection{Feature Missing Model}
+Show boxplots, ROC curves.
 \subsection{Combined Loss Model}
+Semi-failed attempt to train missing signals and coordinates simultaneously.
+\subsection{Putting It All Together}
+Show examples
+
+\section{Kaggle Submission}
+Ranking?
+
 \section{Applications}
 \begin{enumerate}
 \item Engagement Detection
 \end{enumerate}
-
 
 \end{document}
 
