Updates from ShareLaTeX

--- a/final-project/writeup/writeup.tex
+++ b/final-project/writeup/writeup.tex
@@ -25,6 +25,13 @@ University of Chicago Booth School of Business}}
 \subsection{Individual Feature Models}
 Dropout, l1/l2 regularization, and momentum/learning rate.
 \subsection{Feature Missing Model}
+\begin{figure}[!htb]
+  \centering
+  \caption{}
+  \includegraphics[scale=.5]{.pdf}
+  \label{fig:}
+\end{figure}
+
 Show boxplots, ROC curves.
 \subsection{Combined Loss Model}
 Semi-failed attempt to train missing signals and coordinates simultaneously.
