--- a/utils/header_final.tex
+++ b/utils/header_final.tex
@@ -1,6 +1,7 @@
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{cite}
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{multirow}
@@ -13,6 +14,13 @@
 \usepackage{bm}
 \usepackage{chngpage}
 \usepackage{blindtext} % For filler text
+
+\usepackage[english]{babel}
+\usepackage[utf8]{inputenc}
+
+%Includes "References" in the table of contents
+\usepackage[nottoc]{tocbibind}
+
 
 \lstset{
   frame=single,
