Updates from ShareLaTeX

--- a/final-project/writeup/citations.bib
+++ b/final-project/writeup/citations.bib
@@ -39,3 +39,14 @@
   year={2004},
   organization={ACM}
 }
+
+@misc{lasagnenesterov,
+    title     = "Lasagne Manual: Stochastic Gradient Descent (SGD) updates with Nesterov momentum",
+    url       = "http://lasagne.readthedocs.org/en/latest/modules/updates.html#lasagne.updates.nesterov_momentum"
+}
+
+@misc{dnouri,
+    author    = "Daniel Nouri",
+    title     = "Using convolutional neural nets to detect facial keypoints tutorial"
+    url       = "http://danielnouri.org/notes/2014/12/17/using-convolutional-neural-nets-to-detect-facial-keypoints-tutorial"
+}
