--- a/utils/header_final.tex
+++ b/utils/header_final.tex
@@ -1,7 +1,7 @@
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage{amsmath}
 \usepackage{amsfonts}
-\usepackage{cite}
+% \usepackage{cite}
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{multirow}
@@ -15,12 +15,11 @@
 \usepackage{chngpage}
 \usepackage{blindtext} % For filler text
 
-\usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
-
+% \usepackage[style = ieee, urldate =comp]{biblatex}
+% \usepackage[english]{babel}
+% \usepackage[utf8]{inputenc}
 %Includes "References" in the table of contents
-\usepackage[nottoc]{tocbibind}
-
+% \usepackage[nottoc]{tocbibind}
 
 \lstset{
   frame=single,
@@ -39,10 +38,10 @@
   literate={<-}{{$\gets$}}1 {~}{{$\sim$}}1
 }
 
-\hypersetup{
-  colorlinks=true,
-  linkcolor=blue,
-  urlcolor=blue,
-}
+% \hypersetup{
+%   colorlinks=true,
+%   linkcolor=blue,
+%   urlcolor=blue,
+% }
 
 \sisetup{output-exponent-marker=\textsc{e}}
