Updates from ShareLaTeX

--- a/final-project/writeup/citations.bib
+++ b/final-project/writeup/citations.bib
@@ -11,7 +11,7 @@
 
 @article{greiner1995two,
   title={Two-graph receiver operating characteristic (TG-ROC): a Microsoft-EXCEL template for the selection of cut-off values in diagnostic tests},
-  author={Greiner, Matthias},
+  author={Greiner and Matthias},
   journal={Journal of immunological methods},
   volume={185},
   number={1},
@@ -22,7 +22,7 @@
 
 @article{greiner1996two,
   title={Two-graph receiver operating characteristic (TG-ROC): update version supports optimisation of cut-off values that minimise overall misclassification costs},
-  author={Greiner, Matthias},
+  author={Greiner and Matthias},
   journal={Journal of immunological methods},
   volume={191},
   number={1},
@@ -41,12 +41,12 @@
 }
 
 @misc{lasagnenesterov,
-    title     = "Lasagne Manual: Stochastic Gradient Descent (SGD) updates with Nesterov momentum",
-    url       = "http://lasagne.readthedocs.org/en/latest/modules/updates.html#lasagne.updates.nesterov_momentum"
+    title={Lasagne Manual: Stochastic Gradient Descent (SGD) updates with Nesterov momentum},
+    url={http://lasagne.readthedocs.org/en/latest/modules/updates.html#lasagne.updates.nesterov_momentum}
 }
 
 @misc{dnouri,
-    author    = "Daniel Nouri",
-    title     = "Using convolutional neural nets to detect facial keypoints tutorial"
-    url       = "http://danielnouri.org/notes/2014/12/17/using-convolutional-neural-nets-to-detect-facial-keypoints-tutorial"
+    title={Using convolutional neural nets to detect facial keypoints tutorial},
+    author={Daniel Nouri},
+    url={http://danielnouri.org/notes/2014/12/17/using-convolutional-neural-nets-to-detect-facial-keypoints-tutorial}
 }
