Updates from ShareLaTeX

--- a/final-project/writeup/writeup.tex
+++ b/final-project/writeup/writeup.tex
@@ -119,7 +119,12 @@ It turns out that, given the optimization condition, the best cutoff for all of 
 \subsection{Combined Loss Model}
 Semi-failed attempt to train missing signals and coordinates simultaneously.
 \subsection{Putting It All Together}
-Show examples
+\begin{figure}[!htb]
+  \centering
+  \caption{Average Face with Estimated Keypoints}
+  \includegraphics[scale=.5]{avg_face_rmse.pdf}
+  \label{fig:avg_face_rmse}
+\end{figure}
 
 \section{Kaggle Submission}
 Ranking?
