Updates from ShareLaTeX

--- a/final-project/writeup/writeup.tex
+++ b/final-project/writeup/writeup.tex
@@ -18,7 +18,20 @@ University of Chicago Booth School of Business\\
 \section{Summary}
 
 \section{Modelling}
+
 \subsection{Facial Keypoints Introduction}
+
+The goal of this paper is to predict the $(x,y)$ coordinates of 15 facial keypoints for a given set of 96-by-96 grayscale images. The keypoints are:
+\begin{itemize}
+\item Left and right eye center (2)
+\item Left and right eye inner and outer corners (4)
+\item Left and right eyebrow inner and outer ends (4)
+\item Nose tip (1)
+\item Mouth left and right corner (2)
+\item Mouth top and bottom lip center (2)
+\end{itemize}
+A random sample of images and the associated keypoints are shown for reference in ?????.
+
 \subsection{Building a Model (Tools \& Software)}
 
 
